--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                     <li>🏠 <a href="fracmatics.html">fractal cymaticz</a></li>
                     <li>🏠 <a href="cyfractal.html"> cymaticz fractal </a></li>
                     <li>🏠 <a href="cymaticsfractalcat.html"> cymaticz fractal categories </a></li>
+                    <li>🏠 <a href="cyfractalfull.html"> cymaticz fractal physics </a></li>
                         
                 </ul>
             </div>
